# stereo_camera_vo

./: .gitignore  CMakeLists.txt  README.md  debug.txt
config/: frontend_config.yaml  kitti.yaml  run_kitti.yaml  run_m300.yaml  vo_config.yaml
doc/: data_structure.pptx
doc/test/: readme.md
include/app/: visual_odometry.h
include/common/: feature.h  frame.h  map.h  map_point.h
include/module/: backend.h  frontend.h  g2o_types.h
include/stereo_camera_vo/app/: m300_pose_calculator.h  visual_odometry.h
include/stereo_camera_vo/common/: camera.h  feature.h  frame.h  map.h  map_point.h
include/stereo_camera_vo/module/: frontend.h  g2o_types.h  local_BA.h
include/stereo_camera_vo/tool/: algorithm.h  config.h  dataset.h  dataset_base.h  image_preprocess.h  kitti_dataset.h  m300_dataset.h  print_ctrl_macro.h  system_lib.h  viewer.h
include/tool/: algorithm.h  config.h  print_ctrl_macro.h  viewer.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  m300_pose_calculator.cc  visual_odometry.cc
src/common/: CMakeLists.txt  camera.cc  feature.cc  frame.cc  map.cc  map_point.cc
src/module/: CMakeLists.txt  backend.cc  frontend.cc  local_BA.cc
src/test/: CMakeLists.txt  run_kitti.cc  run_m300.cc  test_m300_dataset.cc
src/tool/: CMakeLists.txt  algorithm.cc  config.cc  dataset.cc  dataset_base.cc  image_preprocess.cc  kitti_dataset.cc  m300_dataset.cc  viewer.cc
